--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,6 @@
     <title>{{ site.title }}</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
-    <link rel="stylesheet" href="./assets/css/main.min.css">
-    <script src="./assets/js/main.min.js"></script>
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.min.css">
+    <script src="{{ site.baseurl }}/assets/js/main.min.js"></script>
 </head>
