--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,13 @@
 <html>
 {% include head.html %}
 <body>
-<h1>
-    {{ site.title }}
-</h1>
+{% include navbar.html %}
+<div class="container m-t-2">
+    <div class="row">
+        <div class="col-md-12">
+            {{ content }}
+        </div>
+    </div>
+</div>
 </body>
 </html>
