Changed the size of headings when in small mode.

--- a/_includes/header_full.html
+++ b/_includes/header_full.html
@@ -19,7 +19,7 @@
   </div>
   <div class="row d-sm-none">
       <div class="col-xs-12 mx-auto">
-          <h2 style="text-align: center;">Dr <b>Neill Campbell</b><br><small style="color: #555555;"><b>Royal Society<br class="hidden-md-up"> Industry Fellow</b><br class="hidden-xl-up"> and <b>Senior Lecturer</b><br class="hidden-lg-up"> in <b>Visual Computing</b><br class="hidden-xl-up"> and <b>Machine Learning</b></small></h2>
+          <h2 style="text-align: center;"><span class="ndfc-brand">Dr <b>Neill Campbell</b></span><br><small style="color: #555555;"><b>Royal Society<br class="hidden-md-up"> Industry Fellow</b><br class="hidden-xl-up"> and <b>Senior Lecturer</b><br class="hidden-lg-up"> in <b>Visual Computing</b><br class="hidden-xl-up"> and <b>Machine Learning</b></small></h2>
       </div>
   </div>
 
