--- a/assets/css/ndfc.css
+++ b/assets/css/ndfc.css
@@ -22,6 +22,13 @@ cyan getting darker as you go down..
 3D5B67
 */
 
+@media (max-width: 575.98px) {
+	h1, h2, h3 { text-align: center; }
+	h1 { font-size: 2rem; }
+	h2 { font-size: 1.75rem; }
+	h3 { font-size: 1.5rem; }	
+}
+
 /* Sticky footer START */
 html {
   position: relative;
