--- a/assets/css/ndfc.css
+++ b/assets/css/ndfc.css
@@ -86,3 +86,46 @@ body {
 	/*background-color: #f5f5f5;*/
 }
 /* Sticky footer END */
+
+
+/* Hover effects for group page! 
+   https://www.w3schools.com/howto/howto_css_image_overlay.asp
+ */
+.hovereffect {
+  position: relative;
+  width: 100%;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #6293A6; /*#008CBA;*/
+}
+
+.hovereffect:hover .overlay {
+  opacity: 0.9;
+}
+
+.overlay-text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  opacity: 1;
+  font-weight: bold;
+}
+
+
+
