--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
 		<div class="col-xs-12 col-sm-12 col-lg-6 col-xl-7 pb-2 pt-2">
 			Dr Neill Campbell, Royal Society Industry Fellow,<br />
 			Senior Lecturer in Visual Computing and Machine Learning,
-			<br class="d-xs-block d-md-none d-lg-block d-xl-none"/> University of Bath
+			<br class="d-none d-sm-block d-md-none d-lg-block d-xl-none"/> University of Bath
 		</div>
 	</div>
 	<!--<span class="text-muted">© 2019 Copyright: Neill Campbell</span>-->
