--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <div class="container">
 	<div class="row align-items-center footer-row">
 		<div class="col-xs-6 col-sm-6 col-lg-3 pb-2 pt-2">
-			© <b>Neill&thinsp;D&thinsp;F&thinsp;Campbell</b><br />
-			<a href="mailto:n.campbell@bath.ac.uk">n.campbell@bath.ac.uk</a>
+			© <b>MAD</b><br />
+			<a href="mailto:{{ site.email }}">{{ site.email }}</a>
 		</div>
 		<div class="col-xs-6 col-sm-6 col-lg-3 col-xl-2 pb-2 pt-2">
 			<i class="fab fa-github fa-1x" style="color: gray;"></i> <a href="https://github.com/ndfcampbell">ndfcampbell</a><br />
@@ -10,8 +10,8 @@
 		</div>
 		<div class="w-100 d-xs-block d-lg-none"></div>
 		<div class="col-xs-12 col-sm-12 col-lg-6 col-xl-7 pb-2 pt-2">
-			Dr Neill Campbell, Royal Society Industry Fellow,<br />
-			Senior Lecturer in Visual Computing and Machine Learning,
+			Mathematics and Algorithms for Data,<br />
+			Departments of Mathematics and Computer Science,
 			<br class="d-none d-sm-block d-md-none d-lg-block d-xl-none"/> University of Bath
 		</div>
 	</div>
