--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,9 +15,9 @@
       <a class="d-none d-lg-block nav-item nav-link disabled" href="{{ site.baseurl }}{{ item.url }}">Debug : {{page.url}}</a>
     </div>
   </div>
-  <div class="d-none d-md-block">
+  <!--<div class="d-none d-md-block">
     <a class="nav-item nav-link p-0" href="https://royalsociety.org/"><img height="34" class="d-inline-block align-top" alt="" src="{{ site.baseurl }}/assets/images/logos/rs-logo.png"></a>
-  </div>
+  </div>-->
   <div class="d-none d-md-block">
     <a class="nav-item nav-link p-0 pl-2" href="https://www.bath.ac.uk/"><img height="34" class="d-inline-block align-top" alt="" src="{{ site.baseurl }}/assets/images/logos/bath-logo.png"></a>
   </div>
