--- a/_includes/header_full.html
+++ b/_includes/header_full.html
@@ -8,7 +8,7 @@
           <img class="img-fluid align-self-start" src="{{ site.baseurl }}{{ site.mugshot }}" alt="Photo of Neill">
       </div>-->
       <div class="col-12"><!--col-xs-6 col-sm-7 col-md-8 col-lg-9">-->
-          <h1 style="text-align: center;"><span class="ndfc-brand"><b>Mathematics</b> and <b>Algorithms</b> for <b>Data</b></span><br><small style="color: #555555;"><b>Departments</b> of <b>Mathematics</b><br class="hidden-md-up d-md-none"> and <b>Computer Science</b><br class="hidden-lg-up d-lg-none"> at the <b>University of Bath</b></small></h1>
+          <h1 style="text-align: center;"><span class="ndfc-brand"><b>Mathematics</b> and <b>Algorithms</b> for <b>Data</b></span><br><small style="color: #555555;"><b>Departments</b> of <b>Mathematics</b><br class="hidden-md-up d-md-none"> and <b>Computer Science</b><br class="d-md-none d-lg-block"> at the <b>University of Bath</b></small></h1>
       </div>
     </div>
   <!--</div>
