No need for a sparse header.

--- a/_layouts/default_sparse.html
+++ b/_layouts/default_sparse.html
@@ -8,7 +8,7 @@
 
   <header>
     {% include navbar.html %}
-    {% include header_sparse.html %}
+    {% include header_full.html %}
   </header>
 
   <body>
