--- a/_includes/head_includes.html
+++ b/_includes/head_includes.html
@@ -11,3 +11,6 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/ndfc.css">
+
+<link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/assets/favicon_32.png">
+<link rel="icon" type="image/vnd.microsoft.icon" sizes="32x32" href="{{ site.baseurl }}/assets/favicon.ico">
