--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,19 @@
 <div class="container">
-	<div class="row align-items-center footer-row">
-		<div class="col-xs-6 col-sm-6 col-lg-3 pb-2 pt-2">
-			© <b>MAD</b><br />
-			<a href="mailto:{{ site.email }}">{{ site.email }}</a>
-		</div>
-		<div class="col-xs-6 col-sm-6 col-lg-3 col-xl-2 pb-2 pt-2">
+  <div class="row align-items-center footer-row">
+    <div class="col-xs-6 col-sm-6 col-lg-3 pb-2 pt-2">
+      © <b>MAD</b><br />
+      <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+    </div>
+    <!-- <div class="col-xs-6 col-sm-6 col-lg-3 col-xl-2 pb-2 pt-2">
 			<i class="fab fa-github fa-1x" style="color: gray;"></i> <a href="https://github.com/ndfcampbell">{{ site.github_username }}</a><br />
 			<i class="fab fa-twitter fa-1x" style="color: gray;"></i> <a href="https://twitter.com/releasethegecko">{{ site.twitter_username }}</a>
-		</div>
-		<div class="w-100 d-xs-block d-lg-none"></div>
-		<div class="col-xs-12 col-sm-12 col-lg-6 col-xl-7 pb-2 pt-2">
-			Mathematics and Algorithms for Data,<br />
-			Departments of Mathematics and Computer Science,
-			<br class="d-none d-sm-block d-md-none d-lg-block d-xl-none"/> University of Bath
-		</div>
-	</div>
-	<!--<span class="text-muted">© 2019 Copyright: Neill Campbell</span>-->
+		</div> -->
+    <div class="w-100 d-xs-block d-lg-none"></div>
+    <div class="col-xs-12 col-sm-12 col-lg-6 col-xl-7 pb-2 pt-2">
+      Mathematics and Algorithms for Data,<br />
+      Departments of Mathematics and Computer Science,
+      <br class="d-none d-sm-block d-md-none d-lg-block d-xl-none" /> University of Bath
+    </div>
+  </div>
+  <!--<span class="text-muted">© 2019 Copyright: Neill Campbell</span>-->
 </div>
