--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,8 +10,8 @@
 		</div> -->
     <div class="w-100 d-xs-block d-lg-none"></div>
     <div class="col-xs-12 col-sm-12 col-lg-6 col-xl-7 pb-2 pt-2">
-      Centre for Mathematics and Algorithms for Data (MAD),<br />
-      Departments of Mathematics and Computer Science,
+      Centre for Mathematics and Algorithms for Data (MAD)<br />
+      Departments of Mathematical Sciences and Computer Science,
       <br class="d-none d-sm-block d-md-none d-lg-block d-xl-none" /> University of Bath
     </div>
   </div>
