--- a/_includes/header_full.html
+++ b/_includes/header_full.html
@@ -1,17 +1,22 @@
 <!-- Start Header.. -->
 <div class="container m-t-2">
-<div class="page-header" style="padding-bottom: 9px; margin: 20px 0 20px; border-bottom: 1px solid #eee;">
+  <div class="page-header" style="padding-bottom: 9px; margin: 20px 0 20px; border-bottom: 1px solid #eee;">
 
-  <!--<div class="d-none d-sm-block">-->
+    <!--<div class="d-none d-sm-block">-->
     <div class="row align-items-center">
       <!--<div class="col-xs-6 col-sm-5 col-md-4 col-lg-3">
           <img class="img-fluid align-self-start" src="{{ site.baseurl }}{{ site.mugshot }}" alt="Photo of Neill">
       </div>-->
-      <div class="col-12"><!--col-xs-6 col-sm-7 col-md-8 col-lg-9">-->
-          <h1 style="text-align: center;"><span class="ndfc-brand"><b>Mathematics</b> and <b>Algorithms</b> for <b>Data</b></span><br><small style="color: #555555;"><b>Departments</b> of <b>Mathematics</b><br class="hidden-md-up d-md-none"> and <b>Computer Science</b><br class="d-md-none d-lg-block"> at the <b>University of Bath</b></small></h1>
+      <div class="col-12">
+        <!--col-xs-6 col-sm-7 col-md-8 col-lg-9">-->
+        <h1 style="text-align: center;"><span class="ndfc-brand"><b>University Centre</b> for</span> <span
+            class="ndfc-brand"></span><b>Mathematics</b> and
+          <b>Algorithms</b> for <b>Data</b></span><br><small style="color: #555555;"><b>Departments</b> of
+            <b>Mathematics</b><br class="hidden-md-up d-md-none"> and <b>Computer Science</b><br
+              class="d-md-none d-lg-block"> at the <b>University of Bath</b></small></h1>
       </div>
     </div>
-  <!--</div>
+    <!--</div>
   <div class="row d-sm-none">
       <div class="col-xs-12 mx-auto">
             <img class="img-fluid d-block mx-auto mb-3" width="50%" src="{{ site.baseurl }}{{ site.mugshot }}" alt="Photo of Neill">
@@ -23,6 +28,6 @@
       </div>
   </div>-->
 
-</div>
+  </div>
 </div>
 <!-- End Header.. -->
