--- a/_includes/header_full.html
+++ b/_includes/header_full.html
@@ -9,11 +9,11 @@
       </div>-->
       <div class="col-12">
         <!--col-xs-6 col-sm-7 col-md-8 col-lg-9">-->
-        <h1 style="text-align: center;"><span class="ndfc-brand"><b>University Centre</b> for</span> <span
-            class="ndfc-brand"></span><b>Mathematics</b> and
-          <b>Algorithms</b> for <b>Data</b></span><br><small style="color: #555555;"><b>Departments</b> of
+        <h1 style="text-align: center;"><span class="ndfc-brand">University of Bath Centre for</span>
+          <span class="ndfc-brand"><b>Mathematics</b> and
+            <b>Algorithms</b> for <b>Data</b></span><br><small style="color: #555555;"><b>Departments</b> of
             <b>Mathematics</b><br class="hidden-md-up d-md-none"> and <b>Computer Science</b><br
-              class="d-md-none d-lg-block"> at the <b>University of Bath</b></small></h1>
+              class="d-md-none d-lg-block"></small></h1>
       </div>
     </div>
     <!--</div>
