--- a/_includes/header_full.html
+++ b/_includes/header_full.html
@@ -12,8 +12,7 @@
         <h1 style="text-align: center;"><span class="ndfc-brand">University of Bath Centre for</span>
           <span class="ndfc-brand"><b>Mathematics</b> and
             <b>Algorithms</b> for <b>Data</b></span><br><small style="color: #555555;"><b>Departments</b> of
-            <b>Mathematical Sciences</b><br class="hidden-md-up d-md-none"> and <b>Computer Science</b><br
-              class="d-md-none d-lg-block"></small></h1>
+            <b>Mathematical Sciences</b> and <b>Computer Science</b></small></h1>
       </div>
     </div>
     <!--</div>
