Changed to sticky top to help navigation.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,6 @@
 <!-- Start NavBar.. -->
-<nav class="navbar navbar-expand-md navbar-light bg-light">
+<nav class="navbar sticky-top navbar-expand-md navbar-light bg-light"
+  style="border-bottom: 1px solid #d8dce0!important">
   <a class="navbar-brand" href="{{ site.baseurl }}/"><b class="ndfc-brand">{{ site.brand }}</b></a>
   <div class="d-xs-block d-md-none">
     <a class="nav-item nav-link p-0" href="https://www.bath.ac.uk/"><img height="34" class="d-inline-block align-top" alt="" src="{{ site.baseurl }}/assets/images/logos/bath-logo.png"></a>
