--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,11 @@
   </head>
 
   <header>
-    {% include navbar.html %}
-    {% include header_full.html %}
   </header>
 
   <body>
+    {% include navbar.html %}
+    {% include header_full.html %}
     
     <main role="main" class="container">
     <!--<div class="container m-t-2">-->
@@ -19,7 +19,7 @@
     <!--</div>-->
     </main>
 
-    <footer class="footer bg-light">
+    <footer class="footer bg-light" style="border-top: 1px solid #d8dce0!important">
       {% include footer.html %}
     </footer>
 
