--- a/_includes/header_full_malard.html
+++ b/_includes/header_full_malard.html
@@ -10,7 +10,7 @@
       <div class="col-12">
         <!--col-xs-6 col-sm-7 col-md-8 col-lg-9">-->
         <h1 style="text-align: center;"><span class="ndfc-brand">University of Bath <br></span>
-          <span class="ndfc-brand"><b>MALARD: MAchine Learning and Rheumatic Diseases</b></span><br><small style="color: #555555;"><b>Departments</b> of
+          <span class="ndfc-brand"><b>MALARD: MAchine Learning And Rheumatic Diseases</b></span><br><small style="color: #555555;"><b>Departments</b> of
            <b>Pharmacy & Pharmacology </b> and </b> <b>Mathematical Sciences</b> and <b>Computer Science</b></small></h1>
       </div>
     </div>
