--- a/_includes/header_full_malard.html
+++ b/_includes/header_full_malard.html
@@ -1,4 +1,9 @@
 <!-- Start Header.. -->
+<style>
+  body {
+    background-color:#fbe09b;
+  }
+  </style>
 <div class="container m-t-2">
   <div class="page-header" style="padding-bottom: 9px; margin: 20px 0 20px; border-bottom: 1px solid #eee;">
 
@@ -10,8 +15,8 @@
       <div class="col-12">
         <!--col-xs-6 col-sm-7 col-md-8 col-lg-9">-->
         <h1 style="text-align: center;"><span class="ndfc-brand">University of Bath <br></span>
-          <span class="ndfc-brand"><b>MALARD: MAchine Learning And Rheumatic Diseases</b></span><br><small style="color: #555555;"><b>Departments</b> of
-           <b>Pharmacy & Pharmacology </b> and </b> <b>Mathematical Sciences</b> and <b>Computer Science</b></small></h1>
+          <span class="ndfc-brand"><b>MALARD: MAchine Learning And Rheumatic Diseases</b></span><br><small style="color: #555555;"><b>Departments</b> of 
+           <b>Computer Science</b> and </b> <b>Mathematical Sciences</b> and <b>Pharmacy & Pharmacology </b></small></h1>
       </div>
     </div>
     <!--</div>
