updated sidebar - only one year old

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,21 +1,30 @@
 <div class="card">
-  <h5 class="card-header mb-2">{% if include.just_critical == 'true' %}Latest News{% else %}News{% endif %}</h5>
-  {% if include.just_critical == 'true' %}
-  {% assign filtered_news_items = site.data.news.items | where: "critical", true %} <!--| where: "date", "2019-01-01" %} -->
-  {% else %}
+  <h5 class="card-header mb-2">
+    {% if include.just_critical == 'true' %}Latest News{% else %}News{% endif %}
+  </h5>
+
   {% assign filtered_news_items = site.data.news.items %} 
-  {% endif %}
+
+  {% assign last_year = 'now' | date: "%Y" | minus:1 %}
 
   {% assign sorted_news_items = (filtered_news_items | sort: 'date') | reverse %}
+
   {% for item in sorted_news_items limit: 5 %}
-  <div class="card-body clearfix pb-0 pt-0 mb-2 {%comment%}{% if item.critical %}ndfc-brand{% endif %}{%endcomment%}"><!--text-danger-->
-    <!--<h5 class="card-title">Special title treatment</h5>-->
-    <p class="card-text" style="text-indent: -1em; padding-left: 1em;">
-      <!--<span class="float-left mr-2">{{ item.date }}</span>
-      <span class="">{{ item.text | markdownify | remove: "<p>" | remove: "</p>" }}</span>-->
+
+  {% capture year %}{{item.date | date: "%Y"  }}{% endcapture %}
+  
+  {% assign ayear = year | minus:0 %}
+
+  {% if ayear >= last_year %}
+    <div class="card-body clearfix pb-0 pt-0 mb-2"  >
+
+
+      <p class="card-text" style="text-indent: -1em; padding-left: 1em;">
+ 
       <b>{{ item.date | date: '%b %Y' }}</b> &nbsp;&nbsp; {{ item.text | markdownify | remove: "<p>" | remove: "</p>" | replace: "__", site.baseurl }}
     </p>
-    <!--<a href="#" class="btn btn-primary">Go somewhere</a>-->
+
   </div>
+  {% endif %}
   {% endfor %}
 </div>
